# zendesk-mcp-server

./: Dockerfile  README.md  pyproject.toml
src/zendesk_mcp_server/: server.py  zendesk_client.py
