[project]
name = "zendesk-mcp-server"
version = "0.1.0"
description = "A simple Zendesk MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.27.1",
    "python-dotenv>=1.2.2",
    "zenpy>=2.0.57",
    # Security floors for transitive deps used on the attachment-fetch path.
    "requests>=2.34.2",
    "urllib3>=2.7.0",
    # PDF attachment handling: pymupdf extracts the text layer and renders
    # pages for OCR. OCR shells out to the `tesseract` system binary (piped via
    # stdin), which must be installed on the host along with the relevant
    # language data (e.g. `pol`, `eng`).
    "pymupdf>=1.27.2.3",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
zendesk = "zendesk_mcp_server:main"
